; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_deregister_com_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_deregister_com_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@if_com_alloc = common dso_local global i32** null, align 8
@.str = private unnamed_addr constant [43 x i8] c"if_deregister_com_alloc: %d not registered\00", align 1
@if_com_free = common dso_local global i32** null, align 8
@.str.1 = private unnamed_addr constant [48 x i8] c"if_deregister_com_alloc: %d free not registered\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @if_deregister_com_alloc(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32**, i32*** @if_com_alloc, align 8
  %4 = load i64, i64* %2, align 8
  %5 = getelementptr inbounds i32*, i32** %3, i64 %4
  %6 = load i32*, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  %8 = zext i1 %7 to i32
  %9 = load i64, i64* %2, align 8
  %10 = inttoptr i64 %9 to i8*
  %11 = call i32 @KASSERT(i32 %8, i8* %10)
  %12 = load i32**, i32*** @if_com_free, align 8
  %13 = load i64, i64* %2, align 8
  %14 = getelementptr inbounds i32*, i32** %12, i64 %13
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  %17 = zext i1 %16 to i32
  %18 = load i64, i64* %2, align 8
  %19 = inttoptr i64 %18 to i8*
  %20 = call i32 @KASSERT(i32 %17, i8* %19)
  %21 = load i32**, i32*** @if_com_alloc, align 8
  %22 = load i64, i64* %2, align 8
  %23 = getelementptr inbounds i32*, i32** %21, i64 %22
  store i32* null, i32** %23, align 8
  %24 = load i32**, i32*** @if_com_free, align 8
  %25 = load i64, i64* %2, align 8
  %26 = getelementptr inbounds i32*, i32** %24, i64 %25
  store i32* null, i32** %26, align 8
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
